[web] Fix timezone of candle.

--- a/bittrader-web/src/main/resources/templates/candle.html
+++ b/bittrader-web/src/main/resources/templates/candle.html
@@ -28,7 +28,10 @@
         align: 'left'
       },
       xaxis: {
-        type: 'datetime'
+        type: 'datetime',
+        labels: {
+          datetimeUTC: false
+        }
       },
       yaxis: {
         tooltip: {
