--- a/bittrader-web/src/main/resources/templates/common/nav.html
+++ b/bittrader-web/src/main/resources/templates/common/nav.html
@@ -11,16 +11,31 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCharts" role="button" data-bs-toggle="dropdown"
              aria-expanded="false">
             charts
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li th:each="productCode: ${productCodes}">
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownCharts">
+            <li th:each="productCode : ${productCodes}">
               <a class="dropdown-item" th:text="${productCode}"
-                 th:href="@{/candles/{productCode}(productCode=${productCode})}"></a>
+                 th:href="@{/charts/{productCode}(productCode=${productCode})}"></a>
             </li>
           </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownOrders" role="button" data-bs-toggle="dropdown"
+             aria-expanded="false">
+            orders
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownOrders">
+            <li th:each="productCode : ${productCodes}">
+              <a class="dropdown-item" th:text="${productCode}"
+                 th:href="@{/orders/{productCode}(productCode=${productCode})}"></a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/balances}">balances</a>
         </li>
       </ul>
     </div>
